this commit in add Space Effect

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
       "@react-three/drei": "^9.93.0",
       "@react-three/postprocessing": "^2.15.11",
       "@react-three/rapier": "^1.2.1",
+      "leva": "^0.9.35",
       "r3f-perf": "^7.1.2",
       "zustand": "^4.4.7"
    }
